update links to open in new tab + update 404 page

--- a/blogarchive.html
+++ b/blogarchive.html
@@ -6,7 +6,7 @@ title: Blog Archive
     <h3>Blogroll</h3>
 
     <ul>
-    <li><a href="https://www.r-bloggers.com">R-Bloggers</a></li>
+    <li><a href="https://www.r-bloggers.com" targer="_blank">R-Bloggers</a></li>
     </ul>
 </section>
 
