update blogroll page

--- a/blogroll.html
+++ b/blogroll.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Blog Archive
+title: Related Blogs
 ---
 <section id="blogroll">
-    <h3>Related Blogs</h3>
+    <h3>Blogroll</h3>
 
     <ul>
     <li><a href="https://www.r-bloggers.com" targer="_blank">R-Bloggers</a></li>
